crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__parenthesized__parenthesized.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/parenthesized/parenthesized.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..125,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 66..70,
                    value: Starred(
                        ExprStarred {
                            node_index: NodeIndex(None),
                            range: 67..69,
                            value: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 68..69,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 119..120,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 119..120,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 124..125,
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(None),
                            range: 124..125,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | # Starred expression isn't allowed in a parenthesized expression.
2 | (*x)
  |  ^ Syntax Error: invalid syntax
3 |
4 | # Unparenthesized named expression is allowed.
  |


  |
4 | # Unparenthesized named expression is allowed.
5 | x := 1
  |   ^^ Syntax Error: invalid syntax
